--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,34 +18,36 @@
 </head>
 
 <body>
-  <header>
+  <div class="flex-column justify-space-around">
+    <header class="display-flex justify-space-between align-center p-2">
     <h1>LITTLE-CHEF</h1>
-  </header>
 
-  <nav>
-    <!-- Conditionally render login or logout links -->
-    {{#if logged_in}}
-    <a href="/profile">profile</a> |
-    <button class="no-button" id="logout">logout</button>
-    {{else}}
-    <a href="/login">login</a>
-  </nav>
 
-  <main class="container container-fluid mt-5">
-    <!-- Render the sub layout -->
-    {{{ body }}}
-  </main>
+    <nav>
+      <!-- Conditionally render login or logout links -->
+      {{#if logged_in}}
+      <a href="/profile">profile</a> |
+      <button class="no-button" id="logout">logout</button>
+      {{else}}
+      <a href="/login">login</a>
+      {{/if}}
+    </nav>
 
-  <!-- Footer -->
-  <div class="footer">
-    <a href="#about">About Us</a>
-    |
-    <a href="#contact">Contact</a>
+    </header>
+
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{ body }}}
+    </main>
+
+    <!-- Footer -->
+    <footer> 
+    </footer>
   </div>
 
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
-  <script src="/js/logout.js"></script> 
+  <script src="/js/logout.js"></script>
   {{/if}}
 </body>
 
