--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
-  <!-- Signup Container -->
-  <div class="signup-container" id="signup-container" style="display: none;">
+  <!-- Signup Form -->
+  <div class="signup-form" id="signup-form" style="display: none;">
     <h1>Sign Up</h1>
     <form>
       <label for="newUsername">Username:</label>
