--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
-  <!-- Login Container -->
-  <div class="login-container" id="login-container">
+  <!-- Login Form -->
+  <div class="login-form" id="login-form">
     <h1>Login</h1>
     <form>
       <label for="username">Username:</label>
