--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,31 @@
-  <!-- Signup Form -->
-  <div class="signup-form" id="signup-form" style="display: none;">
-    <h1>Sign Up</h1>
-    <form>
-      <label for="newUsername">Username:</label>
-      <input type="text" id="newUsername" name="newUsername" required />
-      <br />
-      <label for="newPassword">Password:</label>
-      <input type="password" id="newPassword" name="newPassword" required />
-      <br />
-      <label for="email">Email ID:</label>
-      <input type="email" id="email" name="email" required />
-      <br />
-       <a href="javascript:void(0);" onclick="toggleForm('login-container', 'signup-container');">Log in</a>
-    </form>
-    <hr> 
-  </div>
+<!-- Signup Form -->
+<div class="signup-form" id="signup-form">
+  <h1>Sign Up</h1>
+  <form>
+    <label for="first_name">First Name:</label>
+    <input type="text" id="first_name" name="first_name" required />
+    <br />
+    
+    <label for="last_name">Last Name:</label>
+    <input type="text" id="last_name" name="last_name" required />
+    <br />
+    
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required />
+    <br />
+    
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required />
+    <br />
+    
+    <label for="email">Email:</label>
+    <br />
+    <input type="email" id="email" name="email" required />
+    <br />
+    
+    <br />
+    <button type="submit">Sign Up</button>
+  </form>
+</div>
 
-  
-  <script src="./js/login.js"></script>
+<script src="./js/signup.js"></script>
