Edited profile.handlebars - form to add ingredients and display past recipes

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,3 +3,38 @@
     <h2>Welcome, {{first_name}} !</h2>
   </div>
 </div>
+
+
+<div class="row mt-4">
+  <div class="col-md-6">
+    <h3>Enter Ingredients:</h3>
+    <form class="form new-ingredients-list-form">
+      <div class="form-group">
+        <label for="ingredient-name">Ingredient:</label>
+        <input class="form-input" type="text" id="ingredient-name" name="ingredient-name" />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Add</button>
+      </div>
+    </form>
+  </div>
+
+  {{#if recipes.length}}
+  <div class="col-md-6 recipe-list">
+    <h3>Past Recipes</h3>
+
+    {{#each recipes as |recipe|}}
+    <div class="row mb-2">
+      <div class="col-md-8">
+        <h4><a href="/recipe/{{recipe.id}}">{{recipe.name}}</a></h4>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-sm btn-danger" data-id="{{recipe.id}}">DELETE</button>
+      </div>
+    </div>
+    {{/each}}
+  </div>
+  {{/if}}
+</div>
+
+<script src="./js/profile.js"></script>
