--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -19,17 +19,17 @@
     </form>
   </div>
 
-  {{#if recipes.length}}
-  <div class="col-md-6 recipe-list">
-    <h3>Past Recipes</h3>
+  {{#if ingredients.length}}
+  <div class="col-md-6 ingredients-list'">
+    <h3>Ingredients: </h3>
 
-    {{#each recipes as |recipe|}}
+    {{#each ingredients as |ingredient|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/recipe/{{recipe.id}}">{{recipe.name}}</a></h4>
+        <h4><a href="/ingredient/{{ingredient.id}}">{{ingredient.name}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{recipe.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{{ingredient.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
