Added Find New Recipe button to profile

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -20,7 +20,14 @@
     </form>
   </div>
 
-<!-- Display Ingredients and Delete Ingredient-->
+<!--Find New Recipe button-->
+  <div class="row mt-6">
+    <div class="col-md-6">
+      <a href="/recipes" class="btn btn-primary">Find New Recipe</a>
+    </div>
+  </div>
+
+  <!-- Display Ingredients and Delete Ingredient-->
   {{#if ingredients.length}}
   <div class="col-md-6 ingredients-list">
     <h3>Ingredients: </h3>
