Editedd recipe.handlebars - Added recipes header, added logic to display each recipe and add recipe based on id

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,7 +23,7 @@
 <!--Find New Recipe button-->
   <div class="row mt-6">
     <div class="col-md-6">
-      <a href="/recipes" class="btn btn-primary">Find New Recipe</a>
+      <a href="/api/recipes" class="btn btn-primary">Find New Recipe</a>
     </div>
   </div>
 
