--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,13 +1,16 @@
 <!--Display recipes -->
+<div>
+    <h3>Recipes: </h3>
+</div>
+
 {{#if recipes.length}}
 <div class="col-mb-6 recipes-list">
-    <h3>Recipes: </h3>
-
     {{#each recipes as |recipe|}}
     <div class="row mb-2">
         <div class="col-md-8">
-            <h4><a href="api/recipes/{{recipe.id}}">{{recipe.name}}</a></h4>
+            <h4><a href="recipe">{{recipe.name}}</a></h4>
         </div>
+
         <div class="col-md-4">
             <button class="btn btn-sm btn-danger" data-id="{{recipe.id}}">Add</button>
         </div>
@@ -15,7 +18,6 @@
     {{/each}}
 </div>
 {{/if}}
-</div>
 
 
 
