Added, routed welcome page.  Also added link and image to recipe list

--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -8,11 +8,9 @@
     {{#each recipes as |recipe|}}
     <div class="row mb-2">
         <div class="col-md-8">
-            <h4><a href="recipe">{{recipe.name}}</a></h4>
-        </div>
-
-        <div class="col-md-4">
-            <button class="btn btn-sm btn-danger" data-id="{{recipe.id}}">Add</button>
+            <img src={{recipe.image}} alt="image of recipe" width="200" height="200"> 
+            <h4><a href={{recipe.URL}}>{{recipe.name}}</a></h4> 
+            
         </div>
     </div>
     {{/each}}
