--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -7,5 +7,8 @@
 <div class="row">
     <div class = "col-md-6">
         <a href="/input"class="btn btn-primary"> Enter Ingredients</a>
+        <br>
+        <br>
+         <a href="api/favorites"class="btn btn-primary"> Favorites </a>
     </div>
 </div>
