--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -9,6 +9,6 @@
         <a href="/input"class="btn btn-primary"> Enter Ingredients</a>
         <br>
         <br>
-         <a href="api/favorites"class="btn btn-primary"> Favorites </a>
+         <a href="/favorites"class="btn btn-primary"> Favorites </a>
     </div>
 </div>
