--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,23 +1,20 @@
-  <!-- Login Form -->
-  <div class="login-form" id="login-form">
-    <h1>Login</h1>
-    <form>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
-      <br />
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
-      <br />
-      <button type="submit">Login</button>
-    </form>
-    <hr>
-    <p>Don't have an account?
-      <a href="/signup">Sign up</a>
-    </p>
+<!-- Login Form -->
+<div class="login-form" id="login-form">
+  <h1>Login</h1>
+  <form method="POST">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required />
+    <br />
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required />
+    <br />
+    <button type="submit">Login</button>
+  </form>
+  <hr>
+  <p>Don't have an account?
+  <div class='signup'> 
+    <button type="button">Sign Up</button>
   </div>
- 
-  <script src="./js/login.js"></script>
-
-
-
- 
+  </p>
+</div> 
+<script src="./js/login.js"></script>
