--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,4 +90,14 @@ body {
 .footer a:hover {
     text-decoration: underline;
 }
+
+.top-bar{
+    display: flex;
+}
+
+.recipes{
+    margin-top: 100px;
+}
+
+
 }
