Added DOM manipulations to deal with alert messages

--- a/views/captcha.handlebars
+++ b/views/captcha.handlebars
@@ -1,7 +1,7 @@
 <div class="captcha-form">
     <form  method="POST" path={{path}}>
                      {{{captcha}}}
-        <button type="submit">Verify Captcha</button>
+        <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal" >Verify Captcha</button> 
     </form>
 </div>
  
