--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,20 @@
+
 <!-- Login Form -->
 <div class="login-form" id="login-form">
   <h1>Login</h1>
-  <form method="POST">
+  <form>
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required />
     <br />
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required />
     <br />
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-sm btn-primary">Login</button>
   </form>
   <hr>
   <p>Don't have an account?
   <div class='signup'> 
-    <button type="button">Sign Up</button>
+    <button type="button" class="btn btn-sm btn-primary">Sign Up</button>
   </div>
   </p>
 </div> 
