--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url('pxfuel.jpg'); /* Path to your background image */
+    background-image: url('../images/pxfuel.jpg'); /* Path to your background image */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -29,6 +29,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
 
 
 /* Shared styles for login and signup containers */
@@ -90,4 +91,8 @@ body {
 .footer a:hover {
     text-decoration: underline;
 }
+
+.recipes-list{
+    margin-top: 500px;
 }
+
