--- a/views/captcha.handlebars
+++ b/views/captcha.handlebars
@@ -1,7 +1,6 @@
-<div class="captcha-form">
-    <form  method="POST" path={{path}}>
+<div class="captcha-form" >
+    <form  method="POST" action={{path}} id="captcha">
                      {{{captcha}}}
-        <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal" >Verify Captcha</button> 
     </form>
 </div>
  
