--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,12 +24,12 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+}
 
 /* Shared styles for login and signup containers */
 .login-container {
@@ -96,8 +96,12 @@ body {
 }
 
 .recipes{
-    margin-top: 100px;
+    margin-top: 5%;
 }
 
-
+.recipes h3{
+    text-align: center;
+    margin-bottom: 5%;
 }
+
+ 
