Edited style.css to style all pages and edited recipeRoutes to deal with expired image tokens

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,8 +19,9 @@
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/welcome">home</a> |
+        <a href="/recipe"> Show Recipes </a>|
         <button class="no-button" id="logout">logout</button>
-        {{else}}
+        {{else}} 
         <a href="/login">login</a>
         {{/if}}
       </nav> 
