--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required />
     <br />
-    <button type="submit" class="btn btn-sm btn-primary">Login</button>
+    <button type="submit" class="btn btn-sm btn-primary" id="login">Login</button>
   </form>
   <hr>
   <p>Don't have an account?
