--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,8 +31,12 @@ body {
     flex-direction: column;
 } 
 
+/* page-to-hide{
+    background-image: none;
+} */
+
 /* Shared styles for login and signup containers */
-.login-container {
+.login-form {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 10px;
@@ -40,24 +44,25 @@ body {
     text-align: center;
     margin: 0 auto;
     margin-top: 50px; 
+    /* background-image: none!; */
 }
 
-.login-container h1 {
+.login-form h1 {
     margin-bottom: 10px;
 }
 
-.login-container label {
+.login-form label {
     display: block;
     margin-bottom: 5px;
 }
 
-.login-container input {
+.login-form input {
     width: 100%;
     padding: 5px;
     margin-bottom: 10px;
 }
 
-.login-container button {
+.login-form button {
     background-color: #007bff;
     color: white;
     padding: 8px 15px;
@@ -66,7 +71,7 @@ body {
     cursor: pointer;
 }
 
-.login-container button:hover {
+.login-form button:hover {
     background-color: #0056b3;
 }
 
