Added status message disappear after clicking elsewhere on screen

--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,5 +1,5 @@
 <div class="recipes-page">
-    <div class="mt-5 pt-5 recipes">
+    <div class="recipes">
         <!--Display recipes -->
         <div class="col-auto">
             <h3>Recipes: </h3>
