Added transparent white background

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,12 +15,14 @@ header h1 {
   font-size: 36px;
   font-style: italic;
 }
+
 body {
   margin-top: 5%;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif;  
   background-size: cover;
   background-position: center;
+  background-image: url('../images/pxfuel.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
   height: auto;
@@ -30,12 +32,8 @@ body {
   flex-direction: column;
 }
 
-/* page-to-hide{
-    background-image: none;
-} */
-
 /* Shared styles for login and signup containers */
-.login-form, .signup-form, .welcome-form {
+.login-form, .signup-form {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 10px;
@@ -43,8 +41,34 @@ body {
     text-align: center;
     margin: 0 auto;
     margin-top: 50px; 
-    /* background-image: none!; */
 }
+
+#welcome-form {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 50px; 
+  align-items:  center; 
+}
+
+#input-ingredients-form{
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 50px; 
+  align-items:  center; 
+}
+
+
+
 
 .login-form h1, .signup-form h1 {
     margin-bottom: 10px;
@@ -74,10 +98,6 @@ body {
     background-color: #0056b3;
 }
 
-/* Hide the signup container initially */
-/* #signup-container {
-    display: none;
-} */
 /* Footer styles */
 .footer {
   margin-top: 20px;
