--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,18 +13,18 @@
 </head>
 
 <body>
-  <div id="welcome-form" class="flex-column justify-space-around">
+  <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>LITTLE-CHEF</h1>
 
       <nav class="navbar topbar">
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/welcome">home</a> |
+        <a href="/welcome">Home</a> |
         <a href="/recipe"> Show Recipes </a>|
-        <button class="no-button" id="logout">logout</button>
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
