--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,10 +26,9 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   height: auto;
-  display: flex;
-  justify-content: center;
+  display: flex;  
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
 }
 
 /* Shared styles for login and signup containers */
@@ -53,22 +52,53 @@ body {
   margin: 0 auto;
   margin-top: 50px; 
   align-items:  center; 
+  flex-direction: row;
 }
 
 #input-ingredients-form{
   display: flex;
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
   border-radius: 10px;
-  width: 100%;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  width: 100%; 
   text-align: center;
-  margin: 0 auto;
-  margin-top: 50px; 
-  align-items:  center; 
+  margin: 0;
+  margin-top: 50px;  
+  align-items: left;  
+  flex-direction: column;
 }
 
+#input-ingredients-form h2{
+  text-align: center;
+}
 
+.recipes-page{
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  width: 100%; 
+  text-align: center; 
+  flex-direction: column;
+}
 
+#favorites-results{
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  width: 100%; 
+  text-align: center; 
+  flex-direction: column;
+}
+  #line{
+    padding: 20px;
+    margin: 20px;
+    color: green;
+  }
 
 .login-form h1, .signup-form h1 {
     margin-bottom: 10px;
