--- a/views/favorite.handlebars
+++ b/views/favorite.handlebars
@@ -1,5 +1,5 @@
 <!--Display favorites -->
-
+<div id="favorites-results">
 {{#if favorites.length}}
 <div class="col-mb-6 favorites-list">
     <h3>Favorites: </h3>
@@ -19,6 +19,6 @@
     {{/each}}
 </div>
 {{/if}}
-
+</div>
 
 <script src="./js/favorite.js"></script>
