--- a/views/input_ingredients.handlebars
+++ b/views/input_ingredients.handlebars
@@ -1,7 +1,7 @@
-<div id="input_ingredients_form"> 
+<div class="row" id="input-ingredients-form"> 
   <!--Welcome message-->
   <div class="row">
-    <div class="col-auto">
+    <div class="col">
       <h2>Welcome, {{first_name}} !</h2>
     </div>
   </div>
