--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,8 +1,9 @@
 <div class="recipes-page">
+    <div class="status-message"></div>
     <div class="recipes">
         <!--Display recipes -->
         <div class="col-auto">
-            <h3>Recipes: </h3>
+            <h3>Recipes:</h3>
         </div>
         <!-- return to top button-->
         {{#if recipes.length}}
