--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,9 @@ header {
 
 header h1 {
   margin: 0;
-  font-size: 36px;
+  font-size: 24px;
   font-style: italic;
-}
+} 
 
 body {
   margin-top: 5%;
@@ -65,15 +65,16 @@ body {
   text-align: center;
   margin: 0;
   margin-top: 50px;  
-  align-items: left;  
-  flex-direction: column;
+  align-items: center;  
+  flex-direction: row;
 }
 
-#input-ingredients-form h2{
-  text-align: center;
+#input-ingredients-form h2{ 
+  text-align: center;  
 }
 
 .recipes-page{
+  margin-top: 10%;
   display: flex;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
@@ -94,11 +95,6 @@ body {
   text-align: center; 
   flex-direction: column;
 }
-  #line{
-    padding: 20px;
-    margin: 20px;
-    color: green;
-  }
 
 .login-form h1, .signup-form h1 {
     margin-bottom: 10px;
@@ -145,11 +141,12 @@ body {
 }
 
 .top-bar {
-  display: flex;
-}
-
+  display: flex;   
+} 
+ 
 .recipes h3 {
   text-align: center;
+  margin-top: 5%;
   margin-bottom: 5%;
 }
 
@@ -158,5 +155,36 @@ body {
 }
 
 #login {
-  margin-top: 5%;
+  margin-top: 10%;
 } 
+
+#logout{
+  background-color:#333;
+  padding:0;
+  text-decoration: none; 
+}
+
+#logout:hover{
+  color: white;
+  text-decoration: underline;
+}
+
+#loginBtn{
+  color: white;
+  text-decoration: none;
+}
+.navbar-nav{ 
+  align-items: center; 
+}
+
+#loginBtn:hover{
+  text-decoration: underline;
+}
+ 
+#favorites-results{
+  margin-top: 10%;
+}
+
+#favorites-results h3{
+  margin-top: 5%;
+}
