--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,22 +15,37 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>LITTLE-CHEF</h1>
+      <h1> LITTLE-CHEF </h1>
 
-      <nav class="navbar topbar">
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/welcome" id="home">Home</a> |
-        <a href="/recipe"> Show Recipes </a> |
-        <a href="/favorites"> Favorites </a> |
-        <button class="no-button" id="logout">Logout</button>
-        {{else}}
-        <a href="/login">Login</a>
-        {{/if}}
+      <nav class="navbar navbar-expand navbar-dark  topbar">
+        <div class="container-fluid">          
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- Conditionally render login or logout links -->
+            {{#if logged_in}}
+            <li class="nav-item">
+              <a class="nav-link active" href="/welcome" id="home">Home</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" href="/recipe"> Show Recipes </a>
+            </li>
+            <a class="nav-link active" href="/favorites"> Favorites </a>
+            </li>
+
+            <li class="nav-item">
+              <button class="btn btn-link" id="logout"> Logout </button>
+            </li>
+            {{else}}
+            <li class="nav-item">
+              <a href="/login" id="loginBtn">Login</a>
+            </li>
+            {{/if}}
+          </ul>
+        </div>
       </nav>
     </header>
+
     <main class="container container-fluid mt-5">
-      <div class="status-message"></div>
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
