--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <!-- Login Form -->
 <div class="login-form" id="login-form">
+  <div class="status-message"></div>
   <h1>Login</h1>
   <form>
     <label for="username">Username:</label>
