--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,7 @@ body {
   text-align: center;  
 }
 
-.recipes-page{
+.recipes-page, .history-page{
   margin-top: 10%;
   display: flex;
   background-color: rgba(255, 255, 255, 0.8);
@@ -84,6 +84,7 @@ body {
   text-align: center; 
   flex-direction: column;
 }
+ 
 
 #favorites-results{
   display: flex;
@@ -144,13 +145,14 @@ body {
   display: flex;   
 } 
  
-.recipes h3 {
+.recipes, .history h3 {
   text-align: center;
   margin-top: 5%;
   margin-bottom: 5%;
 }
+ 
 
-#topBtn {
+#topBtn, #clearBtn {
   align-self: center;
 }
 
