--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" href="/recipe"> Show Recipes </a>
+              <a class="nav-link active" href="/history"> Show Past Recipes </a>
             </li>
             <a class="nav-link active" href="/favorites"> Favorites </a>
             </li>
