--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,20 @@ body {
   flex-direction: row;
 }
 
+.error-page {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  width: 100%; 
+  text-align: center;
+  margin: 0;
+  margin-top: 50px;  
+  align-items: center;  
+  flex-direction: row;
+}
+
 #input-ingredients-form h2{ 
   text-align: center;  
 }
