--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,7 @@ body {
   display: flex;  
   align-items: center;
   justify-content: center;
+  scrollbar-color: rebeccapurple;
 }
 
 /* Shared styles for login and signup containers */
@@ -80,7 +81,6 @@ body {
   margin: 0;
   margin-top: 50px;  
   align-items: center;  
-  flex-direction: row;
 }
 
 #input-ingredients-form h2{ 
@@ -109,6 +109,10 @@ body {
   width: 100%; 
   text-align: center; 
   flex-direction: column;
+}
+
+#favorites-results button{ 
+  margin-left: 10px; 
 }
 
 .login-form h1, .signup-form h1 {
@@ -167,6 +171,7 @@ body {
  
 
 #topBtn, #clearBtn {
+  margin: 20px;
   align-self: center;
 }
 
