--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ body {
   font-family: Arial, sans-serif;  
   background-size: cover;
   background-position: center;
-  background-image: url('../images/pxfuel.jpg');
+  background-image: url('../images/background.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
   height: auto;
